--- a/scss/object/component/_c-breadcrumb.scss
+++ b/scss/object/component/_c-breadcrumb.scss
@@ -18,6 +18,13 @@
 
 .breadcrumbs {
     color: $white;
+    a {
+        @include txt-border ($white);
+        &::after {
+            bottom: 3.2px;
+            height: 1px;
+        }
+    }
     span {
         line-height: 1.5;
     }
@@ -27,9 +34,6 @@
         color: $white;
         position: relative;
         font-size: 0.75rem;
-        &:hover {
-            border-bottom: 1px solid rgb(255, 255, 255);
-        }
     }
     .current-item {
         font-size: 0.75rem;
